# iris-extend-doc

./: .gitignore  CMakeLists.txt  README.md  TwoSum_1.cpp  TwoSum_1.h  angular.json  client.ts  composer.json  go.mod  ipc.ts  karma.conf.js  main.go  main.ts  package-lock.json  package.json  tsconfig.cli.json  tslint.json
001.TwoSum/: main.cpp  main.js  solution.h
002.AddTwoNumber/: main.cpp  solution.h
003.LongestSubstringWithoutRepeatingCharacters/: main.cpp  solution.h
004.MedianOfTwoSortedArrays/: solution.h
005.LongestPalindromicSubstring/: main.cpp  solution.h
006.ZigzagConversion/: solution.h
007.ReverseInteger/: main.cpp  solution.h
008.StringToIntegerAtoi/: solution.h
009.PalindromeNumber/: main.cpp  solution.h
app/: router.ts
app/service/: Test.ts
config/: config.default.ts  plugin.ts
e2e/src/: app.e2e-spec.ts
src/: ApiGatewayFactory.php  ApiGatewayInterface.php  ApiGatewayService.php  BitController.php  CosFactory.php  CosInterface.php  CosService.php  CurdController.php  index.html  styles.scss
src/Common/: RedisModel.php
src/Middleware/: AuthVerify.php
src/RedisModel/: RefreshToken.php  Sms.php
src/Traits/: Auth.php
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/common/: app.service.ts  electron.service.spec.ts  electron.service.ts  redis.service.spec.ts  redis.service.ts
src/app/nav/: nav.component.html  nav.component.scss  (+1 more)
src/common/: AddModel.php  BitController.php  CorsCookieAuth.php  CosFactory.php  CurdRoute.php  DeleteModel.php  EditModel.php  Ext.php  GetModel.php  ListsModel.php  OriginListsModel.php
src/controller/: StringType.go
src/curd/: AddModel.php  DeleteModel.php  EditModel.php  GetModel.php  ListsModel.php  OriginListsModel.php
src/facade/: CorsCookieAuth.php  Curd.php  CurdRoute.php  Ext.php  Passport.php  Tools.php
src/lifecycle/: AddAfterHooks.php  AddBeforeHooks.php  DeleteAfterHooks.php  DeleteBeforeHooks.php  DeletePrepHooks.php  EditAfterHooks.php  EditBeforeHooks.php  GetBeforeHooks.php  GetCustom.php  ListsBeforeHooks.php  ListsCustom.php  OriginListsBeforeHooks.php  OriginListsCustom.php
src/redis/: RefreshToken.php
src/redisModel/: RefreshToken.php
src/service/: CosService.php
src/traits/: AddModel.php  DeleteModel.php  EditModel.php  GetModel.php  ListsModel.php  OriginListsModel.php
(+3 files in other folders)
