cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(TwoSum 001.TwoSum/main.cpp 001.TwoSum/solution.h)
add_executable(AddTwoNumber 002.AddTwoNumber/main.cpp 002.AddTwoNumber/solution.h)
add_executable(LongestSubstringWithoutRepeatingCharacters 003.LongestSubstringWithoutRepeatingCharacters/main.cpp 003.LongestSubstringWithoutRepeatingCharacters/solution.h)